# truthdb

./: .gitignore  Cargo.toml  Dockerfile.bench  Dockerfile.repl  README.md  docker-bench-entrypoint.sh  docker-repl-entrypoint.sh  truthdb.service
.github/workflows/: build-test-truthdb.yml  build-truthdb.yml  ci.yml  deb.yml  release.yml  validate-pr.yml
config/: default.toml
crates/truthdb-bench/: Cargo.toml
crates/truthdb-bench/src/: main.rs
crates/truthdb-cli/: Cargo.toml  README.md  build.rs
crates/truthdb-cli/config/: default.toml
crates/truthdb-cli/src/: config.rs  main.rs  render.rs
crates/truthdb-core/: Cargo.toml
crates/truthdb-core/src/: allocator.rs  auth.rs  backup.rs  client_listener.rs  direct_io.rs  dispatcher.rs  engine.rs  group_commit.rs  lib.rs  lock.rs  session.rs  storage.rs  storage_layout.rs
crates/truthdb-core/src/rel/: aggregate.rs  collation.rs  hash.rs  mod.rs  plan.rs  value.rs
crates/truthdb-core/src/relstore/: btree.rs  buffer_pool.rs  catalog.rs  ctx.rs  heap.rs  index.rs  key.rs  mod.rs  overflow.rs  page.rs  recovery.rs  row.rs  slotted.rs  spill.rs  tests.rs  types.rs  version.rs
crates/truthdb-core/src/repl/: framing.rs  handshake.rs  listener.rs  mod.rs  receiver.rs  sender.rs  server.rs  tls.rs
crates/truthdb-core/src/wal/: log_buffer.rs  mod.rs  records.rs
crates/truthdb-core/tests/: slt.rs  ssms_review_poc.rs
crates/truthdb-core/tests/slt/: aggregation.slt  all_null_groups.slt  alter_add_column.slt  alter_database.slt  alter_insert_select.slt  assign_select.slt  check_constraints.slt  collation_sort_keys.slt  control_flow.slt  correlated_subqueries.slt  ctes.slt  cursors.slt  derived_tables.slt  distinct.slt  exec_text.slt  foreign_keys.slt  functions.slt  hash_operators.slt  include_index.slt  inline_tvf.slt  joins.slt  max_types.slt  multistatement_tvf.slt  order_by_aliases.slt  permissions.slt  principals.slt  procedures.slt  scope_identity.slt  session_options.slt  severity.slt  snapshot_isolation.slt  ssms_probes.slt  subqueries.slt  table_variables.slt  triggers.slt  unique_constraint.slt  views.slt  views_over_views.slt
crates/truthdb-net/: Cargo.toml  README.md
crates/truthdb-net/src/: framing.rs  lib.rs
crates/truthdb-proto/: Cargo.toml  README.md
crates/truthdb-proto/src/: codec.rs  error.rs  frame.rs  lib.rs  message.rs  version.rs
crates/truthdb-sql/: Cargo.toml
crates/truthdb-sql/src/: ast.rs  collation.rs  decimal.rs  error.rs  eval.rs  functions.rs  guid.rs  lexer.rs  lib.rs  like.rs  parser.rs  temporal.rs  value.rs
crates/truthdb-sql/tests/: corpus.rs  sortkey_order.rs
crates/truthdb-sql/tests/corpus/err/: bad_type.sql  dup_primary_key.sql  missing_paren.sql  nested_too_deep.sql  reserved_as_column.sql  trailing_garbage.sql  unterminated_block_comment.sql  unterminated_string.sql
crates/truthdb-sql/tests/corpus/ok/: aggregation.ast  aggregation.sql  alter_table.ast  alter_table.sql  check_constraints.ast  check_constraints.sql  create_index.ast  create_index.sql  create_table.ast  create_table.sql  create_table_composite_pk.ast  create_table_composite_pk.sql  create_table_stage5.ast  create_table_stage5.sql  create_table_unique.ast  create_table_unique.sql  ctes.ast  ctes.sql  delete.ast  delete.sql  derived_tables.ast  derived_tables.sql  drop_table.ast  expression_precedence.ast  expression_precedence.sql  foreign_keys.ast  foreign_keys.sql  insert_multi_row.ast  insert_multi_row.sql  insert_select.ast  insert_select.sql  joins.ast  joins.sql  select_expressions.ast  select_expressions.sql  select_star.ast  select_star.sql  select_where_order.ast  select_where_order.sql  subqueries.ast  (+7 more)
crates/truthdb-tds/: Cargo.toml
crates/truthdb-tds/src/: lib.rs  login.rs  packet.rs  rpc.rs  server.rs  throttle.rs  tls.rs  token.rs  typeinfo.rs
crates/truthdb-tds/tests/: tds_client.rs
crates/truthdb_core/: Cargo.toml
crates/truthdb_core/src/: storage.rs
packaging/: truthdb.service  truthdb.toml.example
packaging/debian/: postinst  postrm  prerm
scripts/: SSMS_CHECKLIST.md  TdsConformance.java  search_smoke.sh  sql_smoke.sh  tds_conformance.go  tds_conformance.py  tds_conformance_gosqlcmd.expected  tds_conformance_prepared.py  tds_conformance_procs.py  tds_conformance_rpc.py  tds_conformance_sqlcmd.expected  tds_conformance_sqlcmd.sql  tds_conformance_tls.py  tds_isolation_matrix.py
src/: config.rs  main.rs
tests/: repl_harness.rs
