[package]
name = "truthdb"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/truthdb_core"]

[workspace.dependencies]
rstest = "0.26.1"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
truthdb_core = { path = "crates/truthdb_core", version = "0.1.0" }

# For config file parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

directories = "5.0"

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.package.truthdb_core]
debug = 2
