[package]
name = "truthdb"
version = "0.1.0"
edition = "2024"
description = "TruthDB database service: io_uring-backed storage with a custom binary protocol on TCP/9623."
license = "MIT"

[workspace]
members = [
    "crates/truthdb-core",
    "crates/truthdb-cli",
    "crates/truthdb-bench",
    "crates/truthdb-proto",
    "crates/truthdb-net",
    "crates/truthdb-sql",
    "crates/truthdb-tds",
]

[workspace.dependencies]
rstest = "0.26.1"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
toml = "0.8"
directories = "5.0"
tokio = { version = "1.39.0", features = ["full"] }
truthdb-proto = { path = "crates/truthdb-proto", version = "0.1.0" }
truthdb-net = { path = "crates/truthdb-net", version = "0.1.0" }
truthdb-sql = { path = "crates/truthdb-sql", version = "0.1.0" }
truthdb-tds = { path = "crates/truthdb-tds", version = "0.1.0" }
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }
libc = "0.2"
io-uring = "0.7"

[dependencies]
truthdb-core = { path = "crates/truthdb-core", version = "0.1.0" }
truthdb-tds = { path = "crates/truthdb-tds", version = "0.1.0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true }

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.package.truthdb-core]
debug = 2

[package.metadata.deb]
name = "truthdb-server"
maintainer = "TruthDB Maintainers <contact@truthdb.io>"
section = "database"
priority = "optional"
extended-description = """\
TruthDB is a database service with io_uring-backed storage and a custom \
binary protocol on TCP/9623. This package installs the truthdb daemon, its \
hardened systemd unit, and a system user to run the service. Configuration \
lives in /etc/truthdb/truthdb.toml; data lives in /var/lib/truthdb."""
depends = "libc6 (>= 2.35), adduser, init-system-helpers (>= 1.52)"
suggests = "truthdb-cli"
assets = [
    ["target/release/truthdb", "usr/bin/", "755"],
    ["packaging/truthdb.service", "lib/systemd/system/", "644"],
    ["packaging/truthdb.toml.example", "etc/truthdb/truthdb.toml", "644"],
]
conf-files = ["/etc/truthdb/truthdb.toml"]
maintainer-scripts = "packaging/debian"
