[package]
name = "truthdb-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
truthdb-proto = { workspace = true }
truthdb-net = { workspace = true }
truthdb-sql = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
libc = { workspace = true }
io-uring = { workspace = true }
icu_collator = { version = "2.2", features = ["compiled_data", "unstable"] }
icu_locale_core = "2.0"

[dev-dependencies]
rstest = { workspace = true }
